# domainfilter

./: settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/domainfilter/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/filters/: advertising.txt
app/src/main/cpp/: domain_extraction.c  domain_filter.c  domainfilter.c
app/src/main/cpp/include/: domainfilter.h
app/src/main/java/com/example/domainfilter/: FilterVpnService.kt  FirstFragment.kt  MainActivity.kt  PermissionActivity.kt  SecondFragment.kt
app/src/main/java/com/example/domainfilter/util/: FilterManager.kt
app/src/main/java/util/: FilterManager.kt
app/src/main/res/drawable/: ic_vpn_service.xml
app/src/main/res/layout/: activity_main.xml  activity_permission.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/example/domainfilter/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
